add milestones and example notebook for instructor script - day 1

--- a/nvt_mc.ipynb
+++ b/nvt_mc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,34 +11,118 @@
     "import math\n",
     "from copy import deepcopy\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
+    "import pandas as pd\n",
     "\n",
     "%matplotlib notebook"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestone\n",
+    "The instructor script will perform a Monte Carlo simulation using the following user defined variables:\n",
+    "- reduced temperature (reduced_temperature)\n",
+    "- cut-off (cutoff) The cut-off for LJ energy calculation\n",
+    "- number of moves (num_steps) - The number of displacements to try\n",
+    "- maximum displacement (max_displacement) - The maximum displacement of a particle in one dimension during a move."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "\n",
-    "reduced_density = 0.9\n",
     "reduced_temperature = 0.9\n",
-    "num_particles = 50\n",
-    "\n",
-    "beta = 1 / reduced_temperature\n",
-    "# box_length = np.cbrt(num_particles/reduced_density)\n",
-    "box_length = 10.0\n",
-    "cutoff = 3.0\n",
-    "cutoff2 = np.power(cutoff, 2)\n",
-    "\n",
-    "# \n",
     "num_steps = 100\n",
-    "max_displacement = 1"
+    "max_displacement = 1\n",
+    "cutoff = 3.0\n",
+    "\n",
+    "# Calculated quantities\n",
+    "beta = 1 / reduced_temperature\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestone\n",
+    "The instructor script will read an initial configuration from an xyz file from NIST."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get initial coordinates and box info. Units are in reduced units.\n",
+    "\n",
+    "filename = 'sample_config1.xyz'\n",
+    "# Coordinates are columns 1,2,3 in xyz file\n",
+    "coordinates = np.loadtxt(filename, skiprows=2, usecols=(1,2,3))\n",
+    "\n",
+    "# Atom names is column 0 in xyz file.\n",
+    "atoms = np.loadtxt(filename, skiprows=2, usecols=[0], dtype='str')\n",
+    "\n",
+    "# The second line in the xyz file has the box size for periodic boundaries.\n",
+    "with open(filename) as f:\n",
+    "    f.readline()\n",
+    "    box_info = [float(x) for x in f.readline().split()]\n",
+    "\n",
+    "# The box length for the simulation is set to the maximum of the box size.\n",
+    "box_length = np.max(box_info)\n",
+    "\n",
+    "# The number of particles is determined from the number of particles in the initial configuration.\n",
+    "num_particles = len(atoms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestone\n",
+    "**Accuracy Check**: The instructor script will calculate the energy of the initial configuration of the system, and will match the energy given by NIST for the configuration. https://www.nist.gov/mml/csd/chemical-informatics-research-group/lennard-jones-fluid-reference-calculations\n",
+    "- U_pair energy\n",
+    "- U_LRC tail correction\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total system energy is -4351.540194543858\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Determine the total system pairwise energy\n",
+    "total_energy = 0\n",
+    "\n",
+    "for i, position_i in enumerate(coordinates):\n",
+    "    for j, position_j in enumerate(coordinates):\n",
+    "        if j > i:\n",
+    "            rij = position_i - position_j\n",
+    "            rij = rij - box_length * np.round(rij/box_length)\n",
+    "            rij = np.sqrt(np.dot(rij, rij))\n",
+    "\n",
+    "            if rij < cutoff:\n",
+    "                # If less than cut off, calculate pairwise energy\n",
+    "                r6_term = np.power(1/rij, 6)\n",
+    "                r12_term = np.power(r6_term, 2)\n",
+    "                pairwise_energy = 4.0 * (r12_term - r6_term)\n",
+    "                total_energy += pairwise_energy\n",
+    "print(F\"The total system pairwise energy is {total_energy}\")\n",
+    "total_energy = round(total_energy,1)\n",
+    "# Assert that we match the NIST value.\n",
+    "assert total_energy == -4351.5"
    ]
   },
   {
@@ -47,22 +131,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate initial state\n",
-    "\n",
-    "# coordinate = (0.5 - np.random.rand(num_particles, 3)) * box_length\n",
-    "\n",
-    "spacing = int(np.cbrt(num_particles) + 1)\n",
-    "x_vector = np.linspace(0.0, box_length, spacing)\n",
-    "y_vector = np.linspace(0.0, box_length, spacing)\n",
-    "z_vector = np.linspace(0.0, box_length, spacing)\n",
-    "grid  = np.meshgrid(x_vector, y_vector, z_vector)\n",
-    "stack = np.vstack(grid)\n",
-    "coordinates = stack.reshape(3, -1).T\n",
-    "excess = len(coordinates) - num_particles\n",
-    "coordinates = coordinates[:-excess]\n",
-    "coordinates *= 0.95\n",
-    "\n",
-    "#coordinates = np.loadtxt(\"lj_sample_config_periodic1.txt\", skiprows=2, usecols=(1,2,3))\n"
+    "## Long range tail correction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestones\n",
+    "1. The instructor script will implement a Monte Carlo simulation of a Lennard Jones fluid.\n",
+    "1. The instructor script will be a flat script with no user defined functions.\n",
+    "1. The instructor script will use reduced units."
    ]
   },
   {
@@ -71,11 +150,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Note to instructor - This was written by first writing the comments (#) about what the program would do, then code\n",
+    "was filled in for each step.\n",
+    "\"\"\"\n",
+    "\n",
     "# Loop over steps\n",
+    "\n",
+    "# Make a copy of the coordinates so we keep the original\n",
     "initial_coordinates = deepcopy(coordinates)\n",
+    "delta_energy = 0\n",
     "\n",
     "for step in range(num_steps):\n",
-    "    \n",
+    "\n",
     "    # Randomly pick one of N particles\n",
     "    random_particle = random.randrange(num_particles)\n",
     "    \n",
@@ -92,15 +179,16 @@
     "    new_coordinates[1] += y_rand\n",
     "    new_coordinates[2] += z_rand\n",
     "    \n",
+    "    new_energy = 0\n",
+    "    old_energy = 0\n",
     "    \n",
     "    # Compute energy difference from particle movement. \n",
     "    \n",
     "    for i_particle in range(0, num_particles):\n",
-    "        # Compute original energy of particle with system.\n",
-    "        new_energy = 0\n",
-    "        old_energy = 0\n",
-    "        \n",
+    "       \n",
     "        if i_particle != random_particle:\n",
+    "            # Compute original energy of particle with system.\n",
+    "            \n",
     "            # Compute distance between particles using minimum image convention\n",
     "            r_i = coordinates[i_particle, :]\n",
     "            r_j = original_coordinates\n",
@@ -111,7 +199,7 @@
     "            # Check if distance is less than the cut-off\n",
     "            if rij2 < cutoff:\n",
     "                # If less than cut off, calculate pairwise energy\n",
-    "                sig_by_r6 = np.power(1/rij2, 3)\n",
+    "                sig_by_r6 = np.power(1/rij2, 6)\n",
     "                sig_by_r12 = np.power(sig_by_r6, 2)\n",
     "                original_pairwise_energy = 4.0 * (sig_by_r12 - sig_by_r6)\n",
     "            else:\n",
@@ -120,11 +208,9 @@
     "            \n",
     "            old_energy += original_pairwise_energy\n",
     "\n",
-    "\n",
     "            # Compute new energy of particle with system.\n",
     "\n",
     "            # Compute distance between particles using minimum image convention\n",
-    "            r_i = coordinates[i_particle, :]\n",
     "            r_j = new_coordinates\n",
     "            rij = r_i - r_j\n",
     "            rij = rij - box_length * np.round(rij/box_length)\n",
@@ -133,7 +219,7 @@
     "            # Check if distance is less than the cut-off\n",
     "            if rij2 < cutoff:\n",
     "                # If less than cut off, calculate pairwise energy\n",
-    "                sig_by_r6 = np.power(1/rij2, 3)\n",
+    "                sig_by_r6 = np.power(1/rij2, 6)\n",
     "                sig_by_r12 = np.power(sig_by_r6, 2)\n",
     "                new_pairwise_energy = 4.0 * (sig_by_r12 - sig_by_r6)\n",
     "            else:\n",
@@ -142,47 +228,29 @@
     "            \n",
     "            new_energy += new_pairwise_energy\n",
     "        \n",
-    "    # Calculate change in potential energy (requires energy of previous state)\n",
-    "    delta_energy = original_pairwise_energy - new_pairwise_energy\n",
+    "    # Calculate change in potential energy for particle move.\n",
+    "    delta_energy = new_energy - old_energy\n",
     "    \n",
-    "    # If negative change in energy, accept move, overwrite coordinates\n",
+    "    # If negative or 0 change in energy, accept move, overwrite coordinates\n",
     "    # if deltaU >0 check acceptance criteria\n",
-    "    if delta_energy < 0:\n",
+    "    if delta_energy <= 0:\n",
     "        coordinates[random_particle, :] = new_coordinates\n",
+    "        total_energy += delta_energy\n",
     "    else:\n",
-    "        \n",
     "        probability_acc = math.exp(-delta_energy*beta)\n",
+    "        rand_val = random.uniform(0, 1)\n",
     "        \n",
-    "        if probability_acc > random.uniform(0, 1):\n",
+    "        if probability_acc > rand_val:\n",
     "            # Move is accepted.\n",
     "            coordinates[random_particle, :] = new_coordinates\n",
+    "            total_energy += delta_energy\n",
     "        else:\n",
     "            # Move is not accepted. Do not update coordinates\n",
     "            pass\n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig2 = plt.figure()\n",
-    "ax2 = fig2.add_subplot(111, projection='3d')\n",
-    "ax2.scatter(initial_coordinates[:,0], initial_coordinates[:,1], initial_coordinates[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "ax.scatter(coordinates[:,0], coordinates[:,1], coordinates[:,2])"
+    "    \n",
+    "    \n",
+    "    print(step, total_energy)\n",
+    "        "
    ]
   },
   {
