change directory structure, add tail correction to instructor script day 1

--- a/Day_1/instructor_script.ipynb
+++ b/Day_1/instructor_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get initial coordinates and box info. Units are in reduced units.\n",
+    "import os\n",
     "\n",
-    "filename = 'sample_config1.xyz'\n",
+    "filename = os.path.join('..', 'data', 'sample_config1.xyz')\n",
     "# Coordinates are columns 1,2,3 in xyz file\n",
     "coordinates = np.loadtxt(filename, skiprows=2, usecols=(1,2,3))\n",
     "\n",
@@ -91,17 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The total system energy is -4351.540194543858\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Determine the total system pairwise energy\n",
     "total_energy = 0\n",
@@ -131,7 +124,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Long range tail correction"
+    "## Long range tail correction\n",
+    "tail_correction = 8*np.pi*num_particles**2/(3*box_length**3)*((1/3)*(1/cutoff)**9 - (1/cutoff)**3)\n",
+    "tail_correction = round(tail_correction,2)\n",
+    "\n",
+    "print(F'Internal energy tail correction {tail_correction}')\n",
+    "\n",
+    "assert tail_correction == -1.9849E+02"
    ]
   },
   {
@@ -141,7 +140,8 @@
     "# Milestones\n",
     "1. The instructor script will implement a Monte Carlo simulation of a Lennard Jones fluid.\n",
     "1. The instructor script will be a flat script with no user defined functions.\n",
-    "1. The instructor script will use reduced units."
+    "1. The instructor script will use reduced units.\n",
+    "1. A cut-off will be used for LJ calculation - that is, if particles are separated by a distance greater than the cut-off distance, the LJ interaction will not be calculated."
    ]
   },
   {
